2007-12-13  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(stamps/clone-ecj.stamp): Added -l option to cp. Saves space and time.
	* Makefile.in: Regenerate.

2007-12-13  Gary Benson  <gbenson@redhat.com>

	* contrib/templater/generate.py (preprocess): Remove a PPCism.

2007-12-13  Gary Benson  <gbenson@redhat.com>

	* contrib/templater/*: Imported changes from PPC port.

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp:
	Regenerated from templater (whitespace changes only).
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/disassembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/vmreg_ppc.cpp: Likewise.

2007-12-12  Lillian Angel <langel@redhat.com>

	Fixes Bug #76
	* gcjwebplugin.cc
	(GCJ_SetWindow): Passes width and height with handle.
	* patches/icedtea-plugin.patch
	(PluginMain.java): Fixed to accept width and height, and change size
	of plugin when required.
	(PluginAppletViewer.java): Added listeners to window, change
	attributes of applet when required.

2007-12-12  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/disassembler_ppc.hpp
	(decode): Implement.
	* ports/hotspot/src/cpu/ppc/vm/disassembler_ppc.cpp
	(decode): Likewise.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
	(disassemble): Remove.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
	(disassemble): Likewise.

2007-12-12  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp
	(mpclr): New method.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp
	(mpclr): Likewise.
	* ports/hotspot/src/cpu/ppc/vm/interp_masm_ppc.cpp
	(set_last_Java_frame): Use the above.

2007-12-12  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(clean-patch-ecj): Removed unpatching of ICEDTEA_PATCHES, only
	ICEDTEA_ECJ_PATCH should be removed.
	* Makefile.in: Regenerate.

2007-12-12  Lillian Angel  <langel@redhat.com>

	* Makefile.am